--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
     <title>Document</title>
     <script src="./js/index.js" defer></script>
     <link rel="stylesheet" href="./css/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
     <header>
       <nav class="nav-bar">
         <a href="./signin">Signin</a>
         <a href="./signup">Signup</a>
-        <a href="./categories">Categories</a>
         <a href="./profile">Profile</a>
         <a href="./add-product">Add product</a>
+        <a href="./categories">Categories</a>
       </nav>
     </header>
     <main>
-      <h1>Products</h1>
-      <ul id="products-list" class="products-list"></ul>
+      <div class="p-2">
+        <h1>Products</h1>
+        <ul id="products-list" class="products-list"></ul>
+      </div>
     </main>
     <footer>Instagram | Twitter | Facebook</footer>
   </body>
