--- a/profile/index.html
+++ b/profile/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
     <script src="../js/profile.js" defer></script>
-  </head>
-  <body>
+</head>
+<body>
     <h2 id="heading"></h2>
-    <img src="" alt="avatar" id="avatar" />
+    <img src="" alt="avatar" id="avatar">
     <p id="email"></p>
 
     <a href="/">Back to homepage</a>
-  </body>
+</body>
 </html>
